fix: more cleanup